; ModuleID = '/home/carl/AnghaBench/linux/fs/fuse/extr_dir.c_fuse_dir_compat_ioctl.c'
source_filename = "/home/carl/AnghaBench/linux/fs/fuse/extr_dir.c_fuse_dir_compat_ioctl.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.file = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.fuse_conn = type { i32 }

@ENOTTY = common dso_local global i64 0, align 8
@FUSE_IOCTL_COMPAT = common dso_local global i32 0, align 4
@FUSE_IOCTL_DIR = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i64 (%struct.file*, i32, i64)* @fuse_dir_compat_ioctl to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i64 @fuse_dir_compat_ioctl(%struct.file* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i64, align 8
  %5 = alloca %struct.file*, align 8
  %6 = alloca i32, align 4
  %7 = alloca i64, align 8
  %8 = alloca %struct.fuse_conn*, align 8
  store %struct.file* %0, %struct.file** %5, align 8
  store i32 %1, i32* %6, align 4
  store i64 %2, i64* %7, align 8
  %9 = load %struct.file*, %struct.file** %5, align 8
  %10 = getelementptr inbounds %struct.file, %struct.file* %9, i32 0, i32 0
  %11 = load %struct.TYPE_2__*, %struct.TYPE_2__** %10, align 8
  %12 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %11, i32 0, i32 0
  %13 = load i32, i32* %12, align 4
  %14 = call %struct.fuse_conn* @get_fuse_conn(i32 %13)
  store %struct.fuse_conn* %14, %struct.fuse_conn** %8, align 8
  %15 = load %struct.fuse_conn*, %struct.fuse_conn** %8, align 8
  %16 = getelementptr inbounds %struct.fuse_conn, %struct.fuse_conn* %15, i32 0, i32 0
  %17 = load i32, i32* %16, align 4
  %18 = icmp slt i32 %17, 18
  br i1 %18, label %19, label %22

19:                                               ; preds = %3
  %20 = load i64, i64* @ENOTTY, align 8
  %21 = sub nsw i64 0, %20
  store i64 %21, i64* %4, align 8
  br label %30

22:                                               ; preds = %3
  %23 = load %struct.file*, %struct.file** %5, align 8
  %24 = load i32, i32* %6, align 4
  %25 = load i64, i64* %7, align 8
  %26 = load i32, i32* @FUSE_IOCTL_COMPAT, align 4
  %27 = load i32, i32* @FUSE_IOCTL_DIR, align 4
  %28 = or i32 %26, %27
  %29 = call i64 @fuse_ioctl_common(%struct.file* %23, i32 %24, i64 %25, i32 %28)
  store i64 %29, i64* %4, align 8
  br label %30

30:                                               ; preds = %22, %19
  %31 = load i64, i64* %4, align 8
  ret i64 %31
}

declare dso_local %struct.fuse_conn* @get_fuse_conn(i32) #1

declare dso_local i64 @fuse_ioctl_common(%struct.file*, i32, i64, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
